--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
     "postcss": "^8.4.14",
-    "prettier": "^2.5.1",
+    "postcss-import": "^14.1.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.2",
     "vite": "^2.9.9",
